# mlb-score-py

./: .gitignore  AGENTS.md  README.md  mlb_score.py  pyproject.toml
docs/prd/: game-state-domain-model.md  input-validation-robustness.md  mlb-client-abstraction.md  parallel-api-requests.md
mlb_score/: __init__.py  api.py  cli.py  client.py  display.py  models.py  parser.py  queries.py
tests/: conftest.py  test_api.py  test_cli.py  test_display.py  test_models.py  test_queries.py  test_schedule.py
tests/fixtures/: schedule_2026-04-21.json
