[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mlb-score"
version = "0.1.0"
description = "CLI tool to look up MLB game outcomes for a given team."
readme = "README.md"
requires-python = ">=3.7"
license = {text = "MIT"}
authors = [
    {name = "Lewis Sparlin"},
]

[project.scripts]
mlb-score = "mlb_score.cli:main"

[project.optional-dependencies]
dev = ["pytest"]


[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
